# intracam-web

./: Cargo.toml
src/: app_state.rs  generated_static_files.rs  index.rs  main.rs  photos.rs  qr.rs
src/api/: mod.rs
templates/: base.html  index.html  photos.html  qr.html
